# docker-puppetizer-base

./: .travis.yml  alpine.dockerfile  alpine.dockerfile.jinja2  base.dockerfile.jinja2  centos-db-bolt.dockerfile  centos-db.dockerfile  centos.dockerfile  centos.dockerfile.jinja2  config.yaml  debian.dockerfile.jinja2  fedora.dockerfile.jinja2  generate.py
centos/: Dockerfile  alpine.dockerfile  facter-env.rb
centos/facts/: puppetizer.rb
centos/opt/share/: common.sh  provision.sh
centos/puppet/lib/puppet/type/: puppetizer_scripts.rb
centos/puppet/manifests/: begin.pp  health.pp  init.pp
ci/: build.sh  lib.sh  push.sh  test.sh
dockerfile/: base.jinja2  boost.jinja2  cpp-hocon.jinja2  dev.jinja2  facter.jinja2  init.jinja2  leatherman.jinja2  puppet.jinja2  ruby.jinja2  runit.jinja2  yaml-cpp.jinja2
dockerfile/macros/: paths.jinja2
init/: .gitignore  Makefile  Makefile.in  client.c  client.h  common.h  config.h.in  configure.ac  control.c  control.h  init.c  init.h  log.c  log.h  main.c  service.c  service.h  spawn.c  spawn.h  status.c  status.h
init/src/: client.c  client.h  common.h  control.c  control.h  init.c  init.h  log.h  main.c  service.c  service.h  spawn.c  spawn.h  status.h
init/tests/: control.c  control.h  init.c  init.h  main.c  mock.c  mock.h
opt/etc/puppet/: hiera.yaml  puppet.conf
opt/etc/runit/: 1  2  3  finish  reload
opt/share/: common.sh  provision.sh
puppet/: Gemfile.local
puppet/lib/facter/: fake.rb  puppetizer.rb
puppet/lib/puppet/provider/service/: puppetizer.rb
puppet/manifests/: health.pp  init.pp  last.pp  service.pp
runit/: 02-quiet-logs.patch  03-once-and-stop.patch  opt.patch.tpl
